# JsonScript

./: README.md  main.py  pyproject.toml  test.json  users_upper.csv
examples/: continue_test.jss  convert_users.jss  gui.jss  inheritance.json  more_or_less.jss  poo.json  stdlib_advanced.jss  test_full.jss  test_switch_json.jss  users.csv  validation.json
jsonscript/: compiler.py  environment.py  evaluator.py  exceptions.py  factory.py  instructions.py  runner.py
jsonscript/handlers/: base.py  collection.py  core.py  crypto.py  data.py  fs.py  gui.py  http.py  io.py  logic.py  math.py  object.py  string.py  sys.py  time.py  tui.py
stdlib/: math.jss
temp_secure_zone/: secret.txt
