[tool.poetry]
name = "jsonscript"
version = "0.1.0"
description = ""
# Poetry 1.x expects strings for authors, not inline tables
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# This defines the python requirement. 
# I changed 3.14 to 3.10 to match current stable versions.
python = "^3.10"

[build-system]
# Standard build system for Poetry
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
